5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1637_2704.log
== TEST (2019-04-09 10:52:36) 
-- CODE:
nota = float(input("digite a nota: "))
bonificacao = input(upper.()("bonificacao: "))
print(bonificacao)

-- ERROR:
File "XXXX", line 2
    bonificacao = input(upper.()("bonificacao: "))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:53:13) 
-- CODE:
nota = float(input("digite a nota: "))
bonificacao = input(upper.()"bonificacao: ")
print(bonificacao)

-- ERROR:
File "XXXX", line 2
    bonificacao = input(upper.()"bonificacao: ")
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:53:36) 
-- CODE:
nota = float(input("digite a nota: "))
bonificacao = input("bonificacao: ")
print(bonificacao)

-- OUTPUT:
S
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:54:16) 
-- CODE:
nota = float(input("digite a nota: "))
bonificacao = upper.()(input("bonificacao: "))
print(bonificacao)

-- ERROR:
File "XXXX", line 2
    bonificacao = upper.()(input())
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:54:18) 
-- CODE:
nota = float(input("digite a nota: "))
bonificacao = upper.()(input("bonificacao: "))
print(bonificacao)

-- ERROR:
File "XXXX", line 2
    bonificacao = upper.()(input())
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:55:12) 
-- CODE:
nota = float(input("digite a nota: "))
bonificacao = input(upper.()"bonificacao: ")
print(bonificacao)

-- ERROR:
File "XXXX", line 2
    bonificacao = input(upper.()"bonificacao: ")
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:55:29) 
-- CODE:
nota = float(input("digite a nota: "))
bonificacao = input("upper.()bonificacao: ")
print(bonificacao)

-- OUTPUT:
S
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:00:12) 
-- CODE:
nota = float(input("digite a nota: "))
boni = input("bonificacao: ")
if (boni.lower() == S)
	men = nota + (nota * 10/100)
else:
	men = nota
print(men)


-- ERROR:
File "XXXX", line 3
    if (boni.lower() == S)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:00:53) 
-- CODE:
nota = float(input("digite a nota: "))
boni = input("bonificacao: ")
if (boni.lower() == "S")
	men = nota + (nota * 10/100)
else:
	men = nota
print(men)


-- ERROR:
File "XXXX", line 3
    if (boni.lower() == "S")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:01:10) 
-- CODE:
nota = float(input("digite a nota: "))
boni = input("bonificacao: ")
if (boni.lower() == "S")
	men = nota + (nota * 10/100)
else:
	men = nota
print(men)


-- ERROR:
File "XXXX", line 3
    if (boni.lower() == "S")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:02:20) 
-- CODE:
nota = float(input("digite a nota: "))
boni = input("bonificacao?: ")
if (boni.lower() == "S")
	men = nota + (nota * 10/100)
else:
	men = nota
print(men)


-- ERROR:
File "XXXX", line 3
    if (boni.lower() == "S")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:03:02) 
-- CODE:
nota = float(input("digite a nota: "))
boni = (input("bonificacao?: ")).upper()
if (boni == "S")
	men = nota + (nota * 10/100)
else:
	men = nota
print(men)


-- ERROR:
File "XXXX", line 3
    if (boni == "S")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:03:39) 
-- CODE:
nota = float(input("digite a nota: "))
boni = (input("bonificacao?: ")).upper()
if (boni == "S"):
	men = nota + (nota * 10/100)
else:
	men = nota
print(men)


-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:04:08) 
-- CODE:
nota = float(input("digite a nota: "))
boni = (input("bonificacao?: ")).upper()
if (boni == "S"):
	men = nota + (nota * 10/100)
else:
	men = nota
print(men)


-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:04:15) 
-- CODE:
nota = float(input("digite a nota: "))
boni = (input("bonificacao?: ")).upper()
if (boni == "S"):
	men = nota + (nota * 10/100)
else:
	men = nota
print(men)


-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:04:26) 
-- CODE:
nota = float(input("digite a nota: "))
boni = (input("bonificacao?: ")).upper()
if (boni == "S"):
	men = nota + (nota * 10/100)
else:
	men = nota
print(men)


-- EXECUTION TIME:
0.14498
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
